# hugservice

./: .gitignore  Dockerfile  Dockerfile-gpu  README.md  config.py  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: linter.yml  test.yaml
huggingface/: __init__.py  blip_image_captioning_large.py  tests.py  yolo.py  yolos_tiny.py
huggingface/tests/: test_blip_image_captioning_large.py  test_yolos_tiny.py
huggingface/utils/: storages.py
prebuildfs/opt/bitnami/: .bitnami_components.json
prebuildfs/opt/bitnami/scripts/: libbitnami.sh
rootfs/opt/bitnami/scripts/pytorch/: entrypoint.sh
scripts/: build.sh  install-cuda.sh
src/: main.py  models.py
src/config/: __init__.py
src/huggingface/: __init__.py  speecht5_tts.py  yolos_tiny.py
